--- a/chello.html
+++ b/chello.html
@@ -23,7 +23,7 @@
     <label for="email">关键词Keyword:</label>
     <input type="keyword" id="keyword" name="keyword" required>
     
-    <button type="submit">Submit</button>
+    <button type="submit">提交Submit</button>
 </form>
 
     <p id="responseMessage"></p>
