--- a/chello.html
+++ b/chello.html
@@ -20,7 +20,7 @@
     <label for="email">邮箱（Email）:</label>
     <input type="email" id="email" name="email" required>
         
-    <label for="email">关键词（Keyword）:</label>
+    <label for="keyword">关键词（Keyword）:</label>
     <input type="keyword" id="keyword" name="keyword" required>
     
     <button type="submit">提交（Submit）</button>
