--- a/chello.html
+++ b/chello.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>请提交您的联系方式，Please submit your contact information</title>
 </head>
 <body>
     <h1>Contact Us</h1>
