--- a/chello.html
+++ b/chello.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>请提交您的联系方式，Please submit your contact information</title>
+    <title>Submit your info</title>
 </head>
 <body>
     <h1>Contact Us</h1>
@@ -21,7 +21,7 @@
     <input type="email" id="email" name="email" required>
         
     <label for="keyword">关键词（Keyword）:</label>
-    <input type="keyword" id="keyword" name="keyword" required>
+    <input type="text" id="keyword" name="keyword" required>
     
     <button type="submit">提交（Submit）</button>
 </form>
