--- a/chello.html
+++ b/chello.html
@@ -16,6 +16,9 @@
     
     <label for="position">职位（Position）:</label>
     <input type="text" id="position" name="position" required>
+
+    <label for="phone">手机（Phone）:</label>
+    <input type="text" id="phone" name="phone" required>
     
     <label for="email">邮箱（Email）:</label>
     <input type="email" id="email" name="email" required>
