--- a/chello.html
+++ b/chello.html
@@ -31,16 +31,19 @@
         }
 
         button {
+            display: block; /* 让按钮另起一行 */
+            width: 100%; /* 让按钮和输入框宽度一致 */
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            margin-top: 12px; /* 给按钮上方添加一点间距 */
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #052266;
         }
 
         #responseMessage {
