--- a/chello.html
+++ b/chello.html
@@ -32,18 +32,21 @@
 
         button {
             display: block; /* 让按钮另起一行 */
-            width: 100%; /* 让按钮和输入框宽度一致 */
+            width: auto; /* 设置宽度为自适应 */
+            max-width: 300px; /* 控制按钮的最大宽度，和输入框一致 */
             padding: 10px 20px;
-            background-color: #4CAF50;
+            background-color: #052266;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             margin-top: 12px; /* 给按钮上方添加一点间距 */
+            margin-left: auto; /* 使按钮居中对齐 */
+            margin-right: auto;
         }
 
         button:hover {
-            background-color: #052266;
+            background-color: #45a049;
         }
 
         #responseMessage {
